--- a/idf_component.yml
+++ b/idf_component.yml
@@ -1,4 +1,7 @@
-  dependencies:
-	  arduino:
-	    git: https://github.com/xl9p/arduino-esp32.git
-	    version: i2c_mutex_mod
+dependencies:
+	arduino:
+		git: https://github.com/xl9p/arduino-esp32.git
+		version: i2c_mutex_mod
+	Adafruit_BusIO:
+		git: https://github.com/adafruit/Adafruit_BusIO.git
+		version: master
